--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <div class="container">
     <h1>🛠 Hello Git 🛠</h1>
     <p>First time learning git</p>
+    <ul>
+        <p>My goals</p>
+        <li>Learn about API and how to connect one with javascript or nodeJS</li>
+        <li>Learn python & R</li>
+        <li>learn about data engineering & cloud architecture</li>
+    </ul>
     <script src="app.js"></script>
     </div>
 </body>
